--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body{margin: 0;padding: 0; font-family: 'arial'; font-size: 18px;}
 
 h1,h2,h3,h4,h5,h6{ margin: 0; padding: 0; color: #940049; }
 
-p{color: #333333;}
+p{color: #333333; line-height: 150%; text-align: justify;}
 
 
 .navbar{ height: 50px; background-color: #940049; }
